--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 75px;
-  background-color: hsla(17, 86%, 49%, 0.904);
+  background-color: rgba(13, 0, 133, 0.904);
 }
 
     
